--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <div class="mycanvas"></div>
+   <div class="mycanvas">
+    <div class="santa">
+        <div class="beard"> </div>
+        <div class="face">
+            <div class="eyel"></div>
+            <div class="eyer"></div>
+        </div>
+        <div class="hat">
+            <div class="bottom"></div>
+            <div class="top"></div>
+        </div>
+    </div>
+   </div>
 </body>
 </html>
